tests/toylang/pos/000120_cdrc2.toylang
program a = { while a + a do a = a; } .
