tests/toylang/neg/001687_mutation.toylang
program a = { while program do sleep; } .
